--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "https://desnor.github.io/iceland-quakes",
   "dependencies": {
+    "d3-geo": "^1.9.1",
     "d3-scale": "^1.0.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "topojson": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
