update utils and scales with some helper functions, update package versions to latest

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "homepage": "https://desnor.github.io/iceland-quakes",
   "dependencies": {
-    "d3-geo": "^1.9.1",
+    "d3-geo": "^1.11.1",
     "d3-scale": "^1.0.7",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-scripts": "^2.1.1",
     "topojson": "^3.0.2"
   },
   "scripts": {
@@ -20,6 +20,12 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
-  }
+    "gh-pages": "^1.2.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
